--- a/src/Stylesheets/profile.scss
+++ b/src/Stylesheets/profile.scss
@@ -3,9 +3,8 @@
   background: blue;
   height: 100%;
   .SideBar {
-    background: #da7e7e;
+    background: #e97878;
     flex: 1;
     padding: 3rem;
-    width: 100%;
   }
 }
