--- a/src/Stylesheets/flowerCircle.scss
+++ b/src/Stylesheets/flowerCircle.scss
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 10px;
   .flwr-img {
     background-size: cover;
     background-position: center;
