user error input feedback

--- a/src/Stylesheets/adjForm.scss
+++ b/src/Stylesheets/adjForm.scss
@@ -15,7 +15,7 @@
     top: 20%;
     width: 50%;
     padding: 30px;
-    .close {
+    #close {
       zoom: 1.5;
       color: black;
       float: right;
