--- a/src/Stylesheets/inputForm.scss
+++ b/src/Stylesheets/inputForm.scss
@@ -14,7 +14,7 @@
     top: 20%;
     width: 50%;
     padding: 30px;
-    .close-input {
+    #close-input {
       zoom: 1.5;
       color: black;
       float: right;
