--- a/src/Stylesheets/profile.scss
+++ b/src/Stylesheets/profile.scss
@@ -6,5 +6,20 @@
     background: #e97878;
     flex: 1;
     padding: 3rem;
+    .user-info {
+      border: 2px solid black;
+      padding: 10px;
+      margin-bottom: 10px;
+      .edit-user {
+        margin: 10px;
+      }
+      .pencil-icon {
+        float: right;
+        zoom: 1.3;
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
   }
 }
