made user info form and delete buttons

--- a/src/Stylesheets/profile.scss
+++ b/src/Stylesheets/profile.scss
@@ -12,6 +12,9 @@
       margin-bottom: 10px;
       .edit-user {
         margin: 10px;
+        .edit-close-btn {
+          float: right;
+        }
       }
       .pencil-icon {
         float: right;
