fixed on hover css

--- a/src/Stylesheets/bouquetContainer.scss
+++ b/src/Stylesheets/bouquetContainer.scss
@@ -3,6 +3,7 @@
   background: #a8dbe7;
   padding: 3rem;
   border: 3px solid black;
+  overflow: auto;
   .bouquet-box {
     border: 3px solid black;
   }
