--- a/src/Stylesheets/flowerCircle.scss
+++ b/src/Stylesheets/flowerCircle.scss
@@ -5,10 +5,8 @@
 //   overflow: hidden;
 // }
 
-.test {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.box {
+  position: relative;
   margin: 10px;
   .flwr-img {
     background-size: cover;
@@ -16,15 +14,38 @@
     border-radius: 50%;
     height: 220px;
     width: 220px;
-    transition: 0.5s;
-    &:hover {
-      filter: blur(4px) grayscale(3);
-    }
+    opacity: 1;
+    display: block;
+    transition: .4s ease;
+    backface-visibility: hidden;
   }
-  .flwr-name {
-    position: absolute;
-    font-size: 20px;
-    font-weight: bold;
+  .middle {
+    transition: .4s ease;
+   opacity: 0;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%, -50%);
+   text-align: center;
+  }
+  &:hover .flwr-img{
+    filter: blur(4px) grayscale(3);
+  }
+  &:hover .middle {
+    opacity: 1;
     color: white;
+    font-size: 20px;
+    padding: 16px 32px;
   }
 }
+
+
+
+// #flwr-name {
+//   filter: none;
+//   position: absolute;
+//   font-size: 20px;
+//   font-weight: bold;
+//   color: white;
+// }
