stylized bouquet divs

--- a/src/Stylesheets/bouquetContainer.scss
+++ b/src/Stylesheets/bouquetContainer.scss
@@ -1,10 +1,7 @@
 .bouquet-container {
   flex: 3;
-  background: #a8dbe7;
-  padding: 3rem;
-  border: 3px solid black;
+  padding: 25px;
   overflow: auto;
-  .bouquet-box {
-    border: 3px solid black;
-  }
+  margin-left: 180px;
 }
+// background: #99EDE3;
