--- a/src/Stylesheets/feed.scss
+++ b/src/Stylesheets/feed.scss
@@ -1,6 +1,6 @@
 .feed {
   height: 100%;
-  background-color: #a8dbe7;
+  background-color: #99EDE3;
   h1 {
     margin: 0;
     margin-bottom: 20px;
