--- a/src/Stylesheets/navbar.scss
+++ b/src/Stylesheets/navbar.scss
@@ -2,10 +2,14 @@
   display: flex;
   justify-content: space-evenly;
   padding: 1em;
+  background-color: #c6c6f7;
   .nav-link {
     text-decoration: none;
+    color: white;
     &:hover {
-      color: blue;
+      color: #3d407d;
     }
   }
 }
+
+// #00b4cc
