--- a/src/Stylesheets/bouquetDiv.scss
+++ b/src/Stylesheets/bouquetDiv.scss
@@ -6,6 +6,7 @@
   padding: 10px;
   box-shadow: 6px 6px #808080b5;
   zoom: 0.8;
+  width: 90%;
   .flower-con {
     display: flex;
     flex-wrap: wrap;
@@ -67,4 +68,5 @@
   margin: 1em;
   padding: 10px;
   box-shadow: 5px 7px grey;
+  width: 90%;
 }
