--- a/src/Stylesheets/navbar.scss
+++ b/src/Stylesheets/navbar.scss
@@ -3,6 +3,10 @@
   justify-content: space-evenly;
   padding: 1em;
   background-color: #c6c6f7;
+  border-bottom: 2px solid #3d407d;
+  position: fixed;
+  width: 100%;
+  z-index: 1; 
   .nav-link {
     text-decoration: none;
     color: white;
