--- a/src/Stylesheets/feedDiv.scss
+++ b/src/Stylesheets/feedDiv.scss
@@ -1,4 +1,4 @@
-.bouquet-div {
+.feed-div {
   border: 3px solid #9EA2F2;
   background-color: #C6C6F7;
   border-radius: 20px;
@@ -6,7 +6,6 @@
   padding: 10px;
   box-shadow: 6px 6px #808080b5;
   zoom: 0.8;
-  width: 70%;
   .flower-con {
     display: flex;
     flex-wrap: wrap;
@@ -45,28 +44,27 @@
     }
   }
 
+  .feed-btn {
+    zoom: 1.3;
+    margin-right: 10px;
+    border: 2px solid #e97878;
+    border-radius: 5px;
+    background-color: #e97878;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 3px 3px #615858;
+    &:hover {
+      color: #3d407d;
+    }
+  }
 
   footer {
     background-color: #e2e2f3;
     border-radius: 10px;
     padding: 15px;
     .time-made {
-      padding-top: 6px;
       float: right;
-    }
-    .footer-btn {
-      zoom: 1.4;
-      margin-right: 10px;
-      border: 2px solid #e97878;
-      border-radius: 5px;
-      background-color: #e97878;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      box-shadow: 3px 3px #615858;
-      &:hover {
-        color: #3d407d;
-      }
     }
   }
 }
