--- a/src/Stylesheets/navbar.scss
+++ b/src/Stylesheets/navbar.scss
@@ -6,10 +6,11 @@
   border-bottom: 2px solid #3d407d;
   position: fixed;
   width: 100%;
-  z-index: 1; 
+  z-index: 1;
   .nav-link {
     text-decoration: none;
     color: white;
+    font-weight: bold;
     &:hover {
       color: #3d407d;
     }
