--- a/src/Stylesheets/adjForm.scss
+++ b/src/Stylesheets/adjForm.scss
@@ -6,15 +6,17 @@
   background-color: rgba(0, 0, 0, 0.25);
   display: flex;
   justify-content: center;
-  // align-items: center;
-  top: 50px;
-  left: 0px;
+  bottom: 0;
+  left: 0;
   .modal-content {
-    background-color: white;
+    background-color: #e97878;
+    border: 3px solid #9a5454;
+    border-radius: 10px;
     position: absolute;
     top: 20%;
-    width: 50%;
+    width: 40%;
     padding: 30px;
+    zoom: 1.5;
     #close {
       zoom: 1.5;
       color: black;
@@ -24,11 +26,46 @@
         cursor: pointer;
       }
     }
-    .adj-con {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-evenly;
-      margin: 10px;
+    h4 {
+      background-color: #f99999;
+      padding: 10px;
+      border-radius: 10px;
+      width: 50%;
+      text-align: center;
+      margin: 0 auto;
+      font-size: 20px;
     }
+
+    .adj-form-box {
+      background-color: #f99999;
+      padding: 14px;
+      border-radius: 10px;
+      margin: 15px;
+      .title-bouquet {
+        text-align: center;
+        margin: 14px;
+        label {
+          font-size: 15px;
+        }
+        #title {
+          zoom: 1.2;
+          padding: 2px;
+          text-align: center;
+          border-radius: 9px;
+          border-style: none;
+          width: 30%;
+          &:focus {
+            border-style: none;
+          }
+        }
+      }
+      .adj-con {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        margin: 10px;
+      }
+    }
+
   }
 }
