--- a/src/Stylesheets/profile.scss
+++ b/src/Stylesheets/profile.scss
@@ -16,7 +16,7 @@
     background-color: #C6C6F7;
     border-radius: 20px;
     box-shadow: 6px 6px #808080b5;
-    #adj-btn, #input-btn, #random-btn, #delete-btn, .pencil-icon {
+    #adj-btn, #input-btn, #random-btn, #delete-btn, .pencil-icon, #submit-user-edit {
       border: 2px solid #e97878;
       border-radius: 5px;
       padding: 10px;
@@ -42,12 +42,61 @@
         margin: 10px;
         .edit-close-btn {
           float: right;
+          zoom: 1.5;
+          color: #3d407d;
+          width: 24px;
+          height: 24px;
+          text-align: center;
+          &:hover {
+            color: #D02DE2;
+            background-color: #9EA2F2;
+            border-radius: 25px;
+            cursor: pointer;
+          }
+        }
+        form {
+          font-size: 23px;
+          #username, #email {
+            font-size: 12px;
+            zoom: 1.3;
+            padding: 6px;
+            text-align: center;
+            border-radius: 9px;
+            border-style: none;
+            border: 3px solid #9EA2F2;
+          }
+          #email {
+            width: 90%;
+          }
+          #username {
+            width: 50%;
+          }
         }
       }
       .pencil-icon {
         float: right;
         &:hover {
           cursor: pointer;
+        }
+      }
+    }
+    .delete-prompt {
+      font-size: 22px;
+      text-align: center;
+      button {
+        margin-left: 10px;
+        border: 2px solid #e97878;
+        border-radius: 5px;
+        padding: 10px;
+        margin: 10px;
+        background-color: #e97878;
+        color: white;
+        font-size: 16px;
+        font-weight: bold;
+        cursor: pointer;
+        box-shadow: 3px 3px #615858;
+        &:hover {
+          color: #3d407d;
         }
       }
     }
