--- a/src/Stylesheets/adjective.scss
+++ b/src/Stylesheets/adjective.scss
@@ -1,6 +1,13 @@
 .adj {
-  border: 1px solid blue;
+  background-color: #04b1a2;
+  color: white;
   border-radius: 5px;
   padding: 5px;
-  margin: 2px;
+  margin: 4px;
+  cursor: pointer;
+  box-shadow: 3px 3px #615858;
+  zoom: 1.1;
+  &:hover {
+    color: #03626f;
+  }
 }
