--- a/src/Stylesheets/bouquetDiv.scss
+++ b/src/Stylesheets/bouquetDiv.scss
@@ -78,6 +78,22 @@
   border-radius: 20px;
   margin: 1em;
   padding: 10px;
-  box-shadow: 5px 7px grey;
+  box-shadow: 6px 6px #808080b5;
   width: 70%;
+  button {
+    margin-left: 10px;
+    border: 2px solid #e97878;
+    border-radius: 5px;
+    padding: 2px;
+    margin: 2px;
+    background-color: #e97878;
+    color: white;
+    font-size: 10px;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 6px 6px #808080b5;
+    &:hover {
+      color: #3d407d;
+    }
+  }
 }
