--- a/src/Stylesheets/flowerCircle.scss
+++ b/src/Stylesheets/flowerCircle.scss
@@ -24,13 +24,14 @@
   }
 
   &:hover .flwr-img{
-    filter: blur(4px) grayscale(3);
+    filter: blur(4px) grayscale(2);
   }
 
   &:hover .middle {
     opacity: 1;
-    color: white;
+    color: black;
     font-size: 11px;
+    font-weight: bold;
     padding: 16px 32px;
   }
 }
