--- a/src/Stylesheets/garden.scss
+++ b/src/Stylesheets/garden.scss
@@ -1,7 +1,7 @@
 .garden {
   padding-top: 3em;
   background: #99EDE3;
-  height: 100%;
+  min-height: 100%;
   h1 {
     margin: 0;
     padding-top: 30px;
