--- a/src/Stylesheets/inputForm.scss
+++ b/src/Stylesheets/inputForm.scss
@@ -6,21 +6,90 @@
   background-color: rgba(0, 0, 0, 0.25);
   display: flex;
   justify-content: center;
-  top: 50px;
-  left: 0px;
+  bottom: 0;
+  left: 0;
   .modal-content-input {
-    background-color: white;
+    background-color: #e97878;
+    border: 3px solid #9a5454;
+    border-radius: 10px;
     position: absolute;
     top: 20%;
-    width: 50%;
+    width: 30%;
     padding: 30px;
+    zoom: 1.5;
+    h4 {
+      background-color: #f99999;
+      padding: 10px;
+      border-radius: 10px;
+      width: 50%;
+      text-align: center;
+      margin: 0 auto;
+      font-size: 20px;
+    }
     #close-input {
       zoom: 1.5;
-      color: black;
+      color: #672f2f;
       float: right;
+      margin: 3px;
+      width: 20px;
+      height: 20px;
+      text-align: center;
       &:hover {
-        color: cyan;
+        color: #C6C6F7;
+        background-color: #9a5454;
         cursor: pointer;
+        border-radius: 25px;
+      }
+    }
+
+    form {
+      background-color: #f99999;
+      padding: 14px;
+      border-radius: 10px;
+      margin: 15px;
+      text-align: center;
+      zoom: 1.2;
+      input {
+        zoom: 1.2;
+        padding: 2px;
+        text-align: center;
+        border-radius: 9px;
+        border-style: none;
+        width: 40%;
+        &:focus {
+          border-style: none;
+        }
+      }
+      #submit-btn {
+        zoom: 1.1;
+        margin-right: 10px;
+        width: 30%;
+        border: 2px solid #9ea2f2;
+        border-radius: 5px;
+        background-color: #9ea2f2;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+        box-shadow: 3px 3px #615858;
+        margin: 10px;
+        &:hover {
+          color: #9a5454;
+        }
+      }
+    }
+    #close-input {
+      zoom: 1.5;
+      color: #672f2f;
+      float: right;
+      margin: 3px;
+      width: 20px;
+      height: 20px;
+      text-align: center;
+      &:hover {
+        color: #C6C6F7;
+        background-color: #9a5454;
+        cursor: pointer;
+        border-radius: 25px;
       }
     }
   }
