--- a/src/Stylesheets/navbar.scss
+++ b/src/Stylesheets/navbar.scss
@@ -4,6 +4,7 @@
   padding: 1em;
   background-color: #c6c6f7;
   border-bottom: 2px solid #3d407d;
+  box-shadow: 2px 5px #afafaf;
   position: fixed;
   width: 100%;
   z-index: 1;
