--- a/src/Stylesheets/bouquetDiv.scss
+++ b/src/Stylesheets/bouquetDiv.scss
@@ -92,7 +92,7 @@
     font-size: 10px;
     font-weight: bold;
     cursor: pointer;
-    box-shadow: 2px 2px #808080b5;
+    box-shadow: 3px 3px #615858;
     &:hover {
       color: #3d407d;
     }
