--- a/src/Stylesheets/feedDiv.scss
+++ b/src/Stylesheets/feedDiv.scss
@@ -89,7 +89,7 @@
     font-size: 10px;
     font-weight: bold;
     cursor: pointer;
-    box-shadow: 6px 6px #808080b5;
+    box-shadow: 3px 3px #615858;
     &:hover {
       color: #3d407d;
     }
