--- a/src/Stylesheets/adjForm.scss
+++ b/src/Stylesheets/adjForm.scss
@@ -82,6 +82,7 @@
         font-weight: bold;
         cursor: pointer;
         box-shadow: 3px 3px #615858;
+        margin: 5px;
         &:hover {
           color: #9a5454;
         }
