--- a/src/Stylesheets/profile.scss
+++ b/src/Stylesheets/profile.scss
@@ -1,13 +1,13 @@
 .Profile {
   display: flex;
-  background: #99EDE3;
+  background: #dedede;
   height: 100%;
   padding-top: 3em;
   .SideBar {
     flex: 1;
     margin: 20px;
     padding: 20px;
-    width: 20vw;
+    width: 26vw;
     position: fixed;
     z-index: 1;
     top: 100px;
