--- a/src/Stylesheets/emailForm.scss
+++ b/src/Stylesheets/emailForm.scss
@@ -6,8 +6,8 @@
   background-color: rgba(0, 0, 0, 0.25);
   display: flex;
   justify-content: center;
-  top: 50px;
-  left: 0px;
+  bottom: 0;
+  left: 0;
   .email-content {
     background-color: white;
     position: absolute;
