--- a/src/Stylesheets/inputForm.scss
+++ b/src/Stylesheets/inputForm.scss
@@ -56,6 +56,7 @@
         border-radius: 9px;
         border-style: none;
         width: 40%;
+        margin-bottom: 10px;
         &:focus {
           border-style: none;
         }
