--- a/src/Stylesheets/login.scss
+++ b/src/Stylesheets/login.scss
@@ -1,3 +1,8 @@
-// .login {
-//   margin: 12%;
-// }
+.login {
+  margin-right: 15px;
+  form {
+    background-color: #e2e2f3;
+    padding: 35px;
+    border-radius: 10px;
+  }
+}
