--- a/src/Stylesheets/register.scss
+++ b/src/Stylesheets/register.scss
@@ -1,3 +1,19 @@
-// .register {
-//   margin: 12%;
-// }
+form {
+  background-color: #e2e2f3;
+  padding: 35px;
+  border-radius: 10px;
+  #register-btn {
+    zoom: 1.4;
+    border: 2px solid #9ea2f2;
+    border-radius: 5px;
+    background-color: #9ea2f2;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 3px 3px #615858;
+    margin-top: 20px;
+    &:hover {
+      color: #9a5454;
+    }
+  }
+}
