--- a/src/Stylesheets/welcome.scss
+++ b/src/Stylesheets/welcome.scss
@@ -1,17 +1,34 @@
-.welcome {
-  text-align: center;
+.wrapper {
+  height: 100vh;
+  width: 100vw;
   display: flex;
-  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  border: 3px solid #9EA2F2;
-  background-color: #C6C6F7;
-  border-radius: 20px;
-  box-shadow: 6px 6px #808080b5;
-  padding: 30px;
-  width: 70%;
-  .user-forms {
+  .welcome {
+    text-align: center;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    border: 3px solid #9EA2F2;
+    background-color: #C6C6F7;
+    border-radius: 20px;
+    box-shadow: 6px 6px #808080b5;
+    padding: 40px;
+    width: 50%;
+    .user-forms {
+      display: flex;
+      justify-content: center;
+      margin: 10px;
+      input {
+        zoom: 1.2;
+        padding: 2px;
+        text-align: center;
+        border-radius: 9px;
+        border-style: none;
+        width: 80%;
+        &:focus {
+          border-style: none;
+        }
+      }
+    }
   }
-
 }
