--- a/src/Stylesheets/login.scss
+++ b/src/Stylesheets/login.scss
@@ -1,8 +1,24 @@
 .login {
   margin-right: 15px;
+  zoom: 1.1;
   form {
     background-color: #e2e2f3;
     padding: 35px;
     border-radius: 10px;
+    height: 176px;
+    #login-btn {
+      zoom: 1.4;
+      border: 2px solid #9ea2f2;
+      border-radius: 5px;
+      background-color: #9ea2f2;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 3px 3px #615858;
+      margin-top: 45%;
+      &:hover {
+        color: #9a5454;
+      }
+    }
   }
 }
