--- a/src/Stylesheets/login.scss
+++ b/src/Stylesheets/login.scss
@@ -3,6 +3,7 @@
   zoom: 1.1;
   form {
     background-color: #e2e2f3;
+    box-shadow: 1px 1px 5px #635a5a;
     padding: 35px;
     border-radius: 10px;
     height: 176px;
