--- a/src/Stylesheets/bouquetContainer.scss
+++ b/src/Stylesheets/bouquetContainer.scss
@@ -2,7 +2,12 @@
   flex: 3;
   padding: 25px;
   overflow: auto;
-  margin-left: 350px;
+  margin-left: 21%;
+  #no-bouquets {
+    font-weight: bold;
+    font-size: 20px;
+    margin: 10px;
+  }
   .profile-btns {
     border: 2px solid #e97878;
     border-radius: 5px;
