--- a/src/Stylesheets/bouquetDiv.scss
+++ b/src/Stylesheets/bouquetDiv.scss
@@ -12,6 +12,7 @@
     flex-wrap: wrap;
     justify-content: center;
     background-color: #e2e2f3;
+    box-shadow: 1px 1px 5px #635a5a;
     border-radius: 10px;
     margin: 10px;
     padding: 5px;
@@ -35,6 +36,7 @@
   .header {
     padding: 10px;
     background-color: #e2e2f3;
+    box-shadow: 1px 1px 5px #635a5a;
     border-radius: 10px;
     width: 50%;
     text-align: center;
@@ -48,6 +50,7 @@
 
   footer {
     background-color: #e2e2f3;
+    box-shadow: 1px 1px 5px #635a5a;
     border-radius: 10px;
     padding: 15px;
     .time-made {
