--- a/src/Stylesheets/feedDiv.scss
+++ b/src/Stylesheets/feedDiv.scss
@@ -11,6 +11,7 @@
     flex-wrap: wrap;
     justify-content: center;
     background-color: #e2e2f3;
+    box-shadow: 1px 1px 5px #635a5a;
     border-radius: 10px;
     margin: 10px;
     padding: 5px;
@@ -34,6 +35,7 @@
   .header {
     padding: 10px;
     background-color: #e2e2f3;
+    box-shadow: 1px 1px 5px #635a5a;
     border-radius: 10px;
     width: 50%;
     text-align: center;
@@ -61,6 +63,7 @@
 
   footer {
     background-color: #e2e2f3;
+    box-shadow: 1px 1px 5px #635a5a;
     border-radius: 10px;
     padding: 15px;
     .time-made {
