--- a/src/Stylesheets/garden.scss
+++ b/src/Stylesheets/garden.scss
@@ -1,10 +1,19 @@
 .garden {
   padding-top: 3em;
-  background: #dedede;
+  background: antiquewhite;
   min-height: 100%;
-  h1 {
-    margin: 0;
-    padding-top: 30px;
-    text-align: center;
+  .header {
+    display: flex;
+    justify-content: center;
+    margin: 30px;
+    h1 {
+      margin: 0;
+      padding-top: 30px;
+      text-align: center;
+    }
+    #garden-box {
+      zoom: 0.2;
+      margin-right: 2%;
+    }
   }
 }
