--- a/src/Stylesheets/register.scss
+++ b/src/Stylesheets/register.scss
@@ -1,10 +1,14 @@
 .register {
   zoom: 1.1;
   form {
+    position: relative;
     background-color: #e2e2f3;
     box-shadow: 1px 1px 5px #635a5a;
-    padding: 25px;
     border-radius: 10px;
+    p {
+      color: red;
+      font-size: 10px;
+    }
     #register-btn {
       zoom: 1.3;
       border: 2px solid #9ea2f2;
@@ -14,7 +18,10 @@
       font-weight: bold;
       cursor: pointer;
       box-shadow: 3px 3px #615858;
-      margin-top: 20px;
+      margin: 0 auto;
+      bottom: 8px;
+      position: absolute;
+      left: 9px;
       &:hover {
         color: #9a5454;
       }
