--- a/src/Stylesheets/welcome.scss
+++ b/src/Stylesheets/welcome.scss
@@ -21,6 +21,7 @@
     box-shadow: 6px 6px #888787;
     padding: 40px;
     width: 50%;
+    height: 55%;
     z-index: 1;
     h1 {
       margin: 0;
@@ -29,6 +30,10 @@
       display: flex;
       justify-content: center;
       margin: 10px;
+      form {
+        height: 90%;
+        padding: 10px;
+      }
       input {
         zoom: 1.2;
         padding: 2px;
