--- a/src/Stylesheets/feed.scss
+++ b/src/Stylesheets/feed.scss
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: "Gaegu";
+  font-size: 20px;
   #hanging-flwr1, #hanging-flwr2{
     zoom: 0.3;
     top: 7%;
