--- a/src/Stylesheets/profile.scss
+++ b/src/Stylesheets/profile.scss
@@ -53,6 +53,10 @@
       margin-bottom: 10px;
       overflow-wrap: break-word;
       font-size: 20px;
+      #name {
+        font-family: "Gaegu";
+        font-size: 50px;
+      }
       .edit-user {
         margin: 10px;
         .edit-close-btn {
