--- a/src/Stylesheets/garden.scss
+++ b/src/Stylesheets/garden.scss
@@ -10,6 +10,8 @@
       margin: 0;
       padding-top: 30px;
       text-align: center;
+      font-family: "Gaegu";
+      font-size: 50px;
     }
     #garden-box {
       zoom: 0.2;
