--- a/src/Stylesheets/login.scss
+++ b/src/Stylesheets/login.scss
@@ -1,6 +1,9 @@
 .login {
   margin-right: 15px;
   zoom: 1.1;
+  h1 {
+    font-size: 25px;
+  }
   form {
     position: relative;
     background-color: #e2e2f3;
